SGD8-2810: Fix timeline width + title alignment

--- a/components/41-organisms/timeline/_timeline.scss
+++ b/components/41-organisms/timeline/_timeline.scss
@@ -309,6 +309,7 @@ dl.timeline {
                 }
               }
 
+              .timeline-slot-title button,
               .timeline-slot-date {
                 text-align: right;
               }
@@ -393,6 +394,7 @@ dl.timeline {
                 }
               }
 
+              .timeline-slot-title button,
               .timeline-slot-date {
                 text-align: right;
               }
